--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  @@include('html/head.html', { "title":"Main" })
+  @@include('html/head.html', { "title":"Окна крайнов" })
   <body>
     <!-- header -->
     @@include('html/header.html', {})
