Added preview block

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,1 +1,45 @@
 <!-- main -->
+<main class="main">
+  <div class="main__wrapper">
+    <section class="main__preview-screen preview-screen">
+      <div class="preview-screen__content">
+        <div class="preview-screen__container _container">
+          <div class="preview-screen__inner">
+            <h1 class="preview-screen__heading">
+              Проектирование и монтаж современных окон в Иркутске
+            </h1>
+            <p class="preview-screen__text">
+              Панорамное остекление дома под ключ
+            </p>
+            <form action="#" class="preview-screen__form">
+              <div class="preview-screen__call">
+                <input type="text" class="preview-screen__input" />
+                <button type="send" class="preview-screen__button">
+                  Заказать звонок
+                </button>
+              </div>
+              <div class="preview-screen__data">
+                <input
+                  type="checkbox"
+                  id="checkbox-data"
+                  class="preview-screen__checkbox"
+                  checked
+                />
+                <label for="checkbox-data" class="preview-screen__data-label"
+                  >Я согласен на
+                  <a href="#">обработку персональных данных</a></label
+                >
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="preview-screen__video">
+        <video autoplay muted preload="auto" loop>
+          <source src="@img/main-screen/video-preview.webm" type="video/webm" />
+          <source src="@img/main-screen/video-preview.mp4" type="video/mp4" />
+        </video>
+      </div>
+    </section>
+  </div>
+</main>
