--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,19 @@
 <html lang="en">
   @@include('html/head.html', { "title":"Окна крайнов" })
   <body>
-    <!-- header -->
-    @@include('html/header.html', {})
-    <!-- =====- -->
+    <div class="wrapper">
+      <!-- header -->
+      @@include('html/header.html', {})
+      <!-- =====- -->
 
-    <!-- main -->
-    @@include('html/main.html', {})
-    <!-- =====- -->
+      <!-- main -->
+      @@include('html/main.html', {})
+      <!-- =====- -->
 
-    <!-- footer -->
-    @@include('html/footer.html', {})
-    <!-- =====- -->
+      <!-- footer -->
+      @@include('html/footer.html', {})
+      <!-- =====- -->
+    </div>
     <script src="js/app.min.js"></script>
   </body>
 </html>
