--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       @@include('html/footer.html', {})
       <!-- =====- -->
     </div>
+    <script src="https://unpkg.com/imask"></script>
     <script src="js/app.min.js"></script>
   </body>
 </html>
