Added benefits styles

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -1,7 +1,7 @@
 <!-- main -->
 <main class="main">
   <div class="main__wrapper">
-    <section class="main__preview-screen preview-screen">
+    <section class="main__preview-screen preview-screen screen">
       <div class="preview-screen__content">
         <div class="preview-screen__container _container">
           <div class="preview-screen__inner">
@@ -45,5 +45,70 @@
         </video>
       </div>
     </section>
+    <div class="main__benefits benefits screen">
+      <div class="benefits__container _container">
+        <div class="benefits__slider swiper">
+          <div class="benefits__slider-wrapper swiper-wrapper">
+            <div class="benefits__slide slide-benefits swiper-slide">
+              <div class="slide-benefits__image _ibg">
+                <img src="@img/benefits/1.png" alt="" />
+              </div>
+              <h3 class="slide-benefits__heading">Панорамное остекление</h3>
+              <p class="slide-benefits__text">
+                Идеально подходит для современных домов и лоджий. Используем
+                надежные конструкции из качественного профиля, подхоящие под
+                Сибирский климат
+              </p>
+            </div>
+            <div class="benefits__slide slide-benefits swiper-slide">
+              <div class="slide-benefits__image _ibg">
+                <img src="@img/benefits/2.png" alt="" />
+              </div>
+              <h3 class="slide-benefits__heading">Портальные конструкции</h3>
+              <p class="slide-benefits__text">
+                Проектирование и изготовление даже самых смелых идей. Даем
+                гарантию до 5 лет на работы и конструкции
+              </p>
+            </div>
+            <div class="benefits__slide slide-benefits swiper-slide">
+              <div class="slide-benefits__image _ibg">
+                <img src="@img/benefits/3.png" alt="" />
+              </div>
+              <h3 class="slide-benefits__heading">
+                Безрамное и выносное остекление
+              </h3>
+              <p class="slide-benefits__text">
+                Остекление премиум-объектов наш профиль! Используем проверенные
+                и инновационные методы остекления
+              </p>
+            </div>
+            <div class="benefits__slide slide-benefits swiper-slide">
+              <div class="slide-benefits__image _ibg">
+                <img src="@img/benefits/4.png" alt="" />
+              </div>
+              <h3 class="slide-benefits__heading">Умное стекло</h3>
+              <p class="slide-benefits__text">
+                Энергосбережение, защита от излучения, подстройка под интерьер и
+                эргономика - инновации, которые мы используем
+              </p>
+            </div>
+            <div class="benefits__slide slide-benefits swiper-slide">
+              <div class="slide-benefits__image _ibg">
+                <img src="@img/benefits/5.png" alt="" />
+              </div>
+              <h3 class="slide-benefits__heading">Стекло в интерьере</h3>
+              <p class="slide-benefits__text">
+                Стеклянные ограждения, перегородки, безрамочные створки и
+                множество других изделий, которые можем встроить в задуманный
+                интерьер вашего дома
+              </p>
+            </div>
+          </div>
+          <div class="benefits__next benefits__control"></div>
+          <div class="benefits__prev benefits__control"></div>
+        </div>
+        <img src="@img/decor.svg" class="benefits__decor" />
+      </div>
+    </div>
   </div>
 </main>
