--- a/src/html/head.html
+++ b/src/html/head.html
@@ -4,5 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="@img/favicon.svg" />
   <link rel="stylesheet" href="css/style.min.css" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+  />
   <title>@@title</title>
 </head>
