--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <!-- =====- -->
     </div>
     <script src="https://unpkg.com/imask"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/app.min.js"></script>
   </body>
 </html>
