Added contact block styles

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -110,7 +110,7 @@
         <img src="@img/decor.svg" class="benefits__decor" />
       </div>
     </div>
-    <div class="main__questions questions screen">
+    <section class="main__questions questions screen">
       <div class="questions__container _container">
         <div class="questions__inner">
           <h2 class="questions__heading">
@@ -177,6 +177,122 @@
           alt=""
         />
       </div>
-    </div>
+    </section>
+    <section class="main__team team screen">
+      <div class="team__container _container">
+        <h3 class="team__title">Клиенты нас рекомендуют</h3>
+        <div class="team__slider swiper">
+          <div class="team__slider-inner swiper-wrapper">
+            <div class="team__slide swiper-slide">
+              <div class="team__image-inner">
+                <div class="team__image _ibg">
+                  <img src="@img/team/1.png" alt="" />
+                </div>
+              </div>
+              <p class="team__name">Андрей Степаненко</p>
+              <p class="team__profession">Менеджер по финансам</p>
+            </div>
+            <div class="team__slide swiper-slide">
+              <div class="team__image-inner">
+                <div class="team__image _ibg">
+                  <img src="@img/team/2.jpg" alt="" />
+                </div>
+              </div>
+              <p class="team__name">Людмила Протасова</p>
+              <p class="team__profession">Продукт менеджер</p>
+            </div>
+            <div class="team__slide swiper-slide">
+              <div class="team__image-inner">
+                <div class="team__image _ibg">
+                  <img src="@img/team/3.png" alt="" />
+                </div>
+              </div>
+              <p class="team__name">Ирина Иванова</p>
+              <p class="team__profession">Инженер</p>
+            </div>
+            <div class="team__slide swiper-slide">
+              <div class="team__image-inner">
+                <div class="team__image _ibg">
+                  <img src="@img/team/4.png" alt="" />
+                </div>
+              </div>
+              <p class="team__name">Людмила Иванова</p>
+              <p class="team__profession">Продукт менеджер</p>
+            </div>
+            <div class="team__slide swiper-slide">
+              <div class="team__image-inner">
+                <div class="team__image _ibg">
+                  <img src="@img/team/5.png" alt="" />
+                </div>
+              </div>
+              <p class="team__name">Алиса Дубнова</p>
+              <p class="team__profession">SEO специлист</p>
+            </div>
+            <div class="team__slide swiper-slide">
+              <div class="team__image-inner">
+                <div class="team__image _ibg">
+                  <img src="@img/team/6.jpg" alt="" />
+                </div>
+              </div>
+              <p class="team__name">Виктор Смирнов</p>
+              <p class="team__profession">Главный стекольщик</p>
+            </div>
+            <div class="team__slide swiper-slide">
+              <div class="team__image-inner">
+                <div class="team__image _ibg">
+                  <img src="@img/team/7.jpg" alt="" />
+                </div>
+              </div>
+              <p class="team__name">Олег Данилов</p>
+              <p class="team__profession">Главный инженер</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="main__contact contact screen">
+      <div class="contact__container _container">
+        <div class="contact__inner">
+          <div class="contact__content">
+            <h3 class="contact__title">
+              Запишитесь на расчёт стоимости проекта
+            </h3>
+            <p class="contact__text">в офисе или на вашем объекте</p>
+            <form action="#" class="contact__form">
+              <input
+                type="text"
+                class="contact__name-input input-contact"
+                placeholder="Ваше имя"
+              />
+              <input type="text" class="contact__phone-input input-contact" />
+              <button class="contact__button-send">
+                Оставить заявку на замер
+              </button>
+              <div class="contact__policy">
+                <input
+                  id="checkbox-contact"
+                  type="checkbox"
+                  class="contact__policy-checkbox"
+                  checked
+                />
+                <div class="contact__data-inner">
+                  <label for="checkbox-contact" class="contact__data-label"
+                    >Я согласен на
+                  </label>
+                  <a href="#" class="contact__data-link"
+                    >обработку персональных данных</a
+                  >
+                </div>
+              </div>
+            </form>
+
+            <img src="@img/decor-mod.svg" class="contact__decor-image" />
+          </div>
+          <div class="contact__image _ibg">
+            <img src="@img/contact/1.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
 </main>
