Added example show block and styles

--- a/src/html/main.html
+++ b/src/html/main.html
@@ -250,6 +250,38 @@
         </div>
       </div>
     </section>
+    <div class="main__example-show example-show screen">
+      <div class="example-show__container">
+        <div class="example-show__inner">
+          <div class="example-show__circle">
+            <img
+              src="@img/example-show/show-more-gif.gif"
+              alt=""
+              class="example-show__gif"
+            />
+            <img src="@img/icons/play.svg" class="example-show__play-icon" />
+          </div>
+          <img
+            src="@img/example-show/decor-round-text.svg"
+            alt=""
+            class="example-show__decor-circle"
+          />
+        </div>
+      </div>
+      <div class="example-show__image">
+        <img src="@img/example-show/back-image.jpg" alt="" />
+      </div>
+      <img
+        src="@img/decor.svg"
+        alt=""
+        class="example-show__image-decor example-show__image-decor_first"
+      />
+      <img
+        src="@img/decor.svg"
+        alt=""
+        class="example-show__image-decor example-show__image-decor_second"
+      />
+    </div>
     <section class="main__contact contact screen">
       <div class="contact__container _container">
         <div class="contact__inner">
