--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
       <!-- main -->
       @@include('html/main.html', {})
+      <div class="pagination"></div>
       <!-- =====- -->
     </div>
     <script src="https://unpkg.com/imask"></script>
